--- a/styles.css
+++ b/styles.css
@@ -464,13 +464,13 @@ section{
 
 
 .introduction .main-picture{
-    grid-area: 2 / 7 / 5 / 8;
+    grid-area: 3 / 7 / 4 / 8;
     max-height: 60vh;
     border-radius: 15%;
     opacity:0.9;
     border-style: ridge;
     border-color: #618B6A;
-    transform: translateY(5%);
+    /* transform: translateY(5%); */
 
 }
 
@@ -734,4 +734,8 @@ nav:nth-child(2){
     padding-top: 10px;
     padding-bottom: 10px;
     /* transition: all 0.5s  step-end; */
+}
+
+#soundtrack{
+    grid-area: 5/5/5/10;
 }
