--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 :root{
     --brand-color-dark-blue: "#222A35";
 }
+
+@property --current-selected {
+    syntax: "<number>";
+    inherits: false;
+    initial-value: 0;
+}
+
+
 body, h1, div, h2, p {
     margin: 0;
     padding: 0;
@@ -230,21 +238,31 @@ opacity: 0.7;
     width: 50vw;
     height: 60vh;
     object-fit: cover;
-    opacity:0.2
+    border-radius: 5%;
+    opacity:0.2;
+    z-index:10;
 }
 
 #project-track > .project-img.active{
     opacity:1;
+    width: 60vw;
+    height:70vh;
+
 }
+
 
 #project-track{
     display: flex;
+    align-items: center;
     gap:4vmin;
     position:absolute;
-    left:25%;
-    top:25%;
-    overflow: hidden !important;
-    width: 75%;
+    --current-selected:0;
+    left: calc(25% - var(--current-selected)*50%);
+    top:20%;
+    height: 70vh;
+    overflow : hidden !important;
+    width: calc(75% + var(--current-selected)*50%);
+
     
 }
 
@@ -390,12 +408,13 @@ button.c2b{
 
 #hats{
     display: flex;
-    height: 80vh;
-    grid-area: 2/1/7/1;
+    /* height: 80vh; */
+    width: 60vw;
+    grid-area: 5/2/5/9;
 
-    z-index: 1;
-    flex-direction: column;
-    justify-content: space-evenly;
+    z-index: 100;
+    /* flex-direction: column; */
+    justify-content: space-between;
 }
 
 #stack{
@@ -405,11 +424,11 @@ button.c2b{
     border-width: 0.2em;
     display: flex;
     flex-wrap: wrap;
-    height: 60vh;
+    height: 50vh;
     grid-area: 4/2/4/8;
     justify-content: space-evenly;
     align-items: stretch;
-    transform: translateY(-5%);
+    transform: translateY(-10%);
 }
 section{
     display: grid;
@@ -524,6 +543,10 @@ section > *{
     width: 50vh;
 }
 
+.about-info-block{
+    font-size: 1.2em;
+}
+
 /* .line {
     height: 97.5vh;
     width:0;
@@ -605,12 +628,19 @@ section > *{
     user-select:auto !important;
 }
 
+section.animated-page > h1{
+    grid-area: 1/2/1/4;
+    justify-self: start;
+    translate: 0% -10%;
+}
+
 #summary{
-    grid-area: 1/2/3/8;
+    grid-area: 2/2/3/8;
     font-size: larger;
+    translate: 0% -35%;
 }
 #education{
-    grid-area: 1/ 1 / 3 / 5;
+    grid-area: 2/ 2 / 3 / 6;
     border-color: #bf5700;
     border-style: dashed;
     border-width: 0.5em;
@@ -639,7 +669,7 @@ section > *{
 }
 
 .education.main-picture{
-    grid-area: 3/6/5/8;
+    grid-area: 3/7/5/9;
     border-color: #bf5700;
     opacity: 0;
 }
@@ -788,3 +818,18 @@ nav:nth-child(2){
     opacity:0;
     z-index: -1;
 }
+
+
+/* #project-description {
+    position: fixed;
+    display: block;
+    width: 70%; 
+    height: 70%; 
+    top: 15%;
+    left: 15%;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(191,102,0,1);
+    z-index: 20; 
+    cursor: pointer; 
+  } */
