--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* GLOBAL*/
+
 :root{
     --brand-color-dark-blue: "#222A35";
 }
@@ -15,12 +17,12 @@ body, h1, div, h2, p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+/* TOP LEVEL*/
 .container {
     display: flex;
     min-height: 100vh; 
     height: 100vh;
     align-items: stretch;
-    /* overflow: none; */
 }
 
 .container::-webkit-scrollbar {
@@ -29,6 +31,7 @@ body, h1, div, h2, p {
     scrollbar-width: none;
 }
 
+/* TWO-COLUMNS*/ 
 #left-column {
     display: flex;
     overflow: none;
@@ -41,25 +44,33 @@ body, h1, div, h2, p {
     position: sticky;
 }
 
-.my-name{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: bisque;
-    font-size: x-large;
+#right-column {
+    display: flex;
+    flex-direction: column;
+    flex: 7;
+    background: black; 
+    max-width: 90vw;
+    z-index: 1;
 }
 
-.profile-pic{
-    border-radius: 50%;
-    border: 4px solid  #fff;
-    max-width: 100%;
-    height: auto;
-    display: block;margin: auto;
-
+/* LEFT COLUMN*/ 
+.my-name{
+    font-size: x-large;
 }
 
 .pp-container{
     flex:1;
     margin:20px;
     align-self: center;
+}
+.profile-pic{
+    border-radius: 50%;
+    border: 4px solid  #fff;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+
 }
 
 .navigation-container{
@@ -69,17 +80,6 @@ body, h1, div, h2, p {
     
 }
 
-#right-column {
-    display: flex;
-    flex-direction: column;
-    flex: 7;
-    background: black; 
-    max-width: 90vw;
-    /* max-height: 100vh; 
-    overflow: hidden; */
-    z-index: 1;
-
-}
 .sectionlist-container{
     display: flex;
     flex-direction: column;
@@ -94,7 +94,6 @@ body, h1, div, h2, p {
     color: bisque;
     text-align: start;
     border: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     
     padding-left: 0;
@@ -104,19 +103,10 @@ body, h1, div, h2, p {
     
 }
 
-
-
-.section-content{
-    padding: 20px;
-    position: relative;
-    min-height: 100vh ;
-    /* max-height: 100vh; */
-    width: 100vw;
-}
-
 .social-links{
     display: inline ;
 }
+
 
 .fa {
     color:bisque;
@@ -131,6 +121,47 @@ body, h1, div, h2, p {
 opacity: 0.7;
 }
 
+/*RIGHT COLUMN*/
+
+.section-content{
+    padding: 20px;
+    position: relative;
+    min-height: 100vh ;
+    width: 100vw;
+}
+
+
+.scroll-navigator {
+    background:rgba(191, 87, 0,0.3 );
+    position: fixed;
+    right: 5vw; 
+    bottom: 10vh;
+    width:5px;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1000;
+  }
+
+#scroll-navigator > .nav-circle{
+    width: 10px;
+    height: 10px;
+    margin-bottom: 10vh;
+    background-color: #fff;
+    opacity: 0.9 !important;
+    border-radius: 50%;
+    margin-bottom: 20px; /* Adjust the spacing between circles as needed */
+    cursor: pointer;
+}
+
+#scroll-navigator.hidden{
+    width:0px;
+    height:0px;
+    opacity:0;
+    z-index: -1;
+}
+
 
 .individual-project{
     background-repeat: no-repeat;
@@ -141,14 +172,12 @@ opacity: 0.7;
     margin: 2px;
     color:#fff
 }
+
 .individual-project:hover {
     opacity: 0.7;
-    }
-    
-
-.vertical-flex{
-    flex-direction: column !important;
 }
+    
+/* PROJECTS*/ 
 
 
 .projects-screen{
@@ -239,6 +268,10 @@ opacity: 0.7;
     VIRIDIAN x CELADON => 87BC91
     WISTERIA x CHAMPAGNE => d8c8d2  -> 
 */
+
+.vertical-flex{
+    flex-direction: column !important;
+}
 
 button.c2a{
     flex:1;
@@ -633,35 +666,4 @@ section.animated-page > h1{
 #previously > ul >*{
     margin-bottom: -0.1em !important;
     padding: 0em !important;
-}
-
-.scroll-navigator {
-    background:rgba(191, 87, 0,0.3 );
-    position: fixed;
-    right: 5vw; 
-    bottom: 10vh;
-    width:5px;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 1000;
-  }
-
-#scroll-navigator > .nav-circle{
-    width: 10px;
-    height: 10px;
-    margin-bottom: 10vh;
-    background-color: #fff;
-    opacity: 0.9 !important;
-    border-radius: 50%;
-    margin-bottom: 20px; /* Adjust the spacing between circles as needed */
-    cursor: pointer;
-}
-
-#scroll-navigator.hidden{
-    width:0px;
-    height:0px;
-    opacity:0;
-    z-index: -1;
 }
