--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,21 @@ body, h1, div, h2, p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+section{
+    display: grid;
+    grid-template-columns: 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw;
+    grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
+    place-items: center;
+    align-content: center;
+    min-height: 100vh;
+    height:100vh;
+    min-width: 90vw;
+    color: #d8c8d2;
+} 
+section > *{
+    padding: 0.5em;
+}
+
 /* TOP LEVEL*/
 .container {
     display: flex;
@@ -105,7 +120,9 @@ body, h1, div, h2, p {
 
 .social-links{
     display: inline ;
+    margin-top: 1em;
 }
+
 
 
 .fa {
@@ -118,7 +135,7 @@ body, h1, div, h2, p {
 }
   
 .fa:hover {
-opacity: 0.7;
+    opacity: 0.7;
 }
 
 /*RIGHT COLUMN*/
@@ -163,20 +180,6 @@ opacity: 0.7;
 }
 
 
-.individual-project{
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100%;
-    height: 360px;
-    min-height: 360px;
-    margin: 2px;
-    color:#fff
-}
-
-.individual-project:hover {
-    opacity: 0.7;
-}
-    
 /* PROJECTS*/ 
 
 
@@ -207,15 +210,6 @@ opacity: 0.7;
 }#project-motheory{
     background-image: url('/img/motheory.gif');
 }
-.project-title{
-    position: relative;
-    bottom:0px;
-    left:0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    font-size: 8em;
-    letter-spacing: 20px;
-}
-
 
 #prj{
     display: block;
@@ -225,7 +219,6 @@ opacity: 0.7;
     background-color: black;
     margin: 0rem;
 }
-
 
 #project-track > .project-img{
     width: 50vw;
@@ -242,7 +235,6 @@ opacity: 0.7;
     height:70vh;
 
 }
-
 
 #project-track{
     display: flex;
@@ -269,6 +261,8 @@ opacity: 0.7;
     WISTERIA x CHAMPAGNE => d8c8d2  -> 
 */
 
+/* CONTACT ME*/ 
+
 .vertical-flex{
     flex-direction: column !important;
 }
@@ -276,7 +270,6 @@ opacity: 0.7;
 button.c2a{
     flex:1;
     position: relative;
-
     color: #618B6A;
     bottom: 0%;
     background-color: #222d35;
@@ -285,7 +278,6 @@ button.c2a{
     font-size: 1rem;
     height:10vh;
     width: 10vw;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
     text-align: center;
     vertical-align: middle;
@@ -299,12 +291,8 @@ div.c2a > div{
     vertical-align: middle;
 }
 
-button.c2b{
-    background-color: #c4dfff;
-
-}
-
 .info{
+    /* USED MULTIPLE*/ 
     position: relative;
     flex:5;
     height: 10vh;
@@ -348,12 +336,7 @@ button.c2b{
 
 }
 
-.social-links{
-    margin-top:1em
-}
-
-
-
+/* ABOUT ME */ 
 
 .animated-page{
     transition: all 0.5s ease-in-out, background-color 0s ;
@@ -416,18 +399,7 @@ button.c2b{
     align-items: stretch;
     transform: translateY(-10%);
 }
-section{
-    display: grid;
-    grid-template-columns: 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw;
-    grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
-    place-items: center;
-    align-content: center;
-    min-height: 100vh;
-    height:100vh;
-    min-width: 90vw;
-    color: #d8c8d2;
 
-} 
 
 #about_me_container{
     display: flex;
@@ -468,12 +440,8 @@ section{
     transform: translateY(5%);
 }
 
-
-
 .introduction .main-picture:hover{
-
     opacity:1;
-
 }
 
 .animated-page.career{
@@ -494,10 +462,6 @@ section{
     border-color: #618B6A;
     transform: translate(-10%,5%);
 
-}
-
-section > *{
-    padding: 0.5em;
 }
 
 #about-block{
@@ -603,6 +567,7 @@ section.animated-page > h1{
 #other{
     grid-area: 2/ 2 / 5 / 4;
 }
+
 .other{
     border-color: #618B6A;
     border-style: dashed;
