--- a/style/subsection-layouts/education.css
+++ b/style/subsection-layouts/education.css
@@ -6,7 +6,7 @@
     grid-template-columns: 10vw 30vw 10vw 30vw 10vw;
     grid-template-rows: 20vh 20vh 30vh 20vh 10vh;
     grid-template-areas:"nn hd ee ee -- "
-                        "nn ed aa pp -- "
+                        "nn ed ed pp -- "
                         "nn cl aa pp -- "
                         "nn cl aa pp -- "
                         "nn mn mn pp -- ";
@@ -17,6 +17,7 @@
     border-color: #bf5700;
     border-style: dashed;
     border-width: 0.5em;
+    
 }
 .education.main-picture{
     grid-area: pp;
