--- a/styles.css
+++ b/styles.css
@@ -61,25 +61,26 @@ section > *{
     background: black; 
     max-width: 90vw;
     z-index: 1;
+    overflow-y: hidden;
 }
 
 /* LEFT COLUMN*/ 
 .my-name{
-    font-size: x-large;
+    font-size: 1.5rem;
 }
 
 .pp-container{
     flex:1;
-    margin:20px;
+    margin:10px;
     align-self: center;
 }
 .profile-pic{
     border-radius: 50%;
     border: 4px solid  #fff;
-    max-width: 100%;
+    max-width: 8vw;
     height: auto;
     display: block;
-    margin: auto;
+    /* margin: auto; */
 
 }
 
@@ -119,19 +120,12 @@ section > *{
     margin-top: 1em;
 }
 
-
-
 .fa {
     color:var(--brand-color-champagne);
-    font-size: 10px;
     width: 10px;
     margin-right:10px;
     text-align: center;
     text-decoration: none;
-}
-  
-.fa:hover {
-    opacity: 0.7;
 }
 
 /*RIGHT COLUMN*/
